[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Food.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.7538, 12.8039 )

[node name="Food" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="LabelTween" type="Tween" parent="."]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YouWinLabel" type="Label" parent="Control"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -26.5
margin_right = 26.5
margin_bottom = 14.0
text = "You win!"
align = 1
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
